<resources>
    <string name="app_name">My Pokédex</string>
    <string name="title_pokedex">Pokédex</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_search">Search</string>
    <string name="cd_pokemon">Pokemon</string>
    <string name="number">#</string>
    <string name="tv_height">Height</string>
    <string name="height_image_cd">height image</string>
    <string name="tv_weight">Weight</string>
    <string name="weight_image_cd">weight image</string>
    <string name="title_pokemon_detail">Pokemon Detail</string>
    <string name="favorite_menu_title">Favorite</string>
    <string name="txt_search">Search</string>
    <string name="txt_try_again">Ops! Please try again!</string>
    <string name="txt_retry" translatable="false">Retry</string>
    <string name="txt_hp" translatable="false">HP</string>
    <string name="txt_atk" translatable="false">ATK</string>
    <string name="txt_def" translatable="false">DEF</string>
    <string name="txt_sp_atk" translatable="false">SpATK</string>
    <string name="txt_sp_def" translatable="false">SpDEF</string>
    <string name="txt_spd" translatable="false">SPD</string>
    <string name="blank" translatable="false">\"\"</string>
    <string name="txt_no_fav_pok">Ops! You don\'t have any favorite pokemon yet!</string>
</resources>