<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.searchDetail.SearchDetail">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_search_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/search_detail_toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/pokemon_detail_menu"
            app:navigationIcon="@drawable/arrow_back"
            app:title="@string/title_pokemon_detail" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/iv_searchDetail"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/cd_pokemon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar_search_detail"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_search_name_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_searchDetail"
        tools:text="Charizard" />

    <TextView
        android:id="@+id/tv_search_hashtag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_margin_default"
        android:text="@string/number"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/tv_search_name_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_search_name_detail" />

    <TextView
        android:id="@+id/tv_pokemon_search_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_margin_default"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/tv_search_hashtag"
        app:layout_constraintTop_toBottomOf="@id/tv_search_name_detail"
        tools:text="002" />

    <com.google.android.material.chip.Chip
        android:id="@+id/search_chip_type_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        app:layout_constraintStart_toStartOf="@id/tv_search_name_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_search_hashtag"
        tools:chipBackgroundColor="#FDA05A"
        tools:chipIcon="@drawable/fogo"
        tools:text="Fogo" />

    <com.google.android.material.chip.Chip
        android:id="@+id/search_chip_type_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/half_margin_default"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/search_chip_type_one"
        app:layout_constraintStart_toEndOf="@id/search_chip_type_one"
        app:layout_constraintTop_toTopOf="@id/search_chip_type_one"
        tools:chipBackgroundColor="@color/voador"
        tools:chipIcon="@drawable/voador"
        tools:text="Voador"
        tools:visibility="visible" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/half_margin_default"
        app:cardElevation="@dimen/half_margin_default"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_chip_type_one">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_default">

            <ImageView
                android:id="@+id/iv_search_height"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="@dimen/margin_default"
                android:contentDescription="@string/height_image_cd"
                android:src="@drawable/height"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_search_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_height"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_search_height"
                app:layout_constraintStart_toEndOf="@id/iv_search_height"
                app:layout_constraintTop_toTopOf="@id/iv_search_height" />

            <TextView
                android:id="@+id/tv_search_height_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@id/tv_search_height"
                app:layout_constraintStart_toStartOf="@id/iv_search_height"
                app:layout_constraintTop_toBottomOf="@id/iv_search_height"
                tools:text="1.7 m" />

            <ImageView
                android:id="@+id/iv_search_weight"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/weight_image_cd"
                android:src="@drawable/weight"
                app:layout_constraintBottom_toBottomOf="@id/iv_search_height"
                app:layout_constraintEnd_toStartOf="@id/tv_search_weight"
                app:layout_constraintTop_toTopOf="@id/iv_search_height" />

            <TextView
                android:id="@+id/tv_search_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_default"
                android:text="@string/tv_weight"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_search_weight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/iv_search_weight" />

            <TextView
                android:id="@+id/tv_search_weight_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@id/tv_search_weight"
                app:layout_constraintStart_toStartOf="@id/iv_search_weight"
                app:layout_constraintTop_toBottomOf="@id/iv_search_weight"
                tools:text="29 hg" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>