<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pokemonDetail.PokemonDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/pokemon_detail_toolbar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/pokemon_detail_menu"
                app:navigationIcon="@drawable/arrow_back"
                app:title="@string/title_pokemon_detail" />

        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/iv_pokemonDetail"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/cd_pokemon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar_detail"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_hashtag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_default"
            android:text="@string/number"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_pokemonDetail" />

        <TextView
            android:id="@+id/tv_pokemon_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_hashtag"
            app:layout_constraintStart_toEndOf="@id/tv_hashtag"
            app:layout_constraintTop_toTopOf="@id/tv_hashtag"
            tools:text="002" />

        <TextView
            android:id="@+id/tv_pokemon_name_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_margin_default"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tv_hashtag"
            app:layout_constraintStart_toEndOf="@id/tv_pokemon_number"
            app:layout_constraintTop_toTopOf="@id/tv_hashtag"
            tools:text="Charizard" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_type_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_margin_default"
            app:layout_constraintStart_toStartOf="@id/tv_hashtag"
            app:layout_constraintTop_toBottomOf="@id/tv_hashtag"
            tools:chipBackgroundColor="#FDA05A"
            tools:chipIcon="@drawable/fogo"
            tools:text="Fogo" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_type_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_margin_default"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/chip_type_one"
            app:layout_constraintStart_toEndOf="@id/chip_type_one"
            app:layout_constraintTop_toTopOf="@id/chip_type_one"
            tools:chipBackgroundColor="@color/voador"
            tools:chipIcon="@drawable/voador"
            tools:text="Voador"
            tools:visibility="visible" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_haw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/half_margin_default"
            app:cardElevation="@dimen/half_margin_default"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chip_type_one">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/half_margin_default">

                <ImageView
                    android:id="@+id/iv_height"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="@dimen/margin_default"
                    android:contentDescription="@string/height_image_cd"
                    android:src="@drawable/height"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_height"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@id/iv_height"
                    app:layout_constraintStart_toEndOf="@id/iv_height"
                    app:layout_constraintTop_toTopOf="@id/iv_height" />

                <TextView
                    android:id="@+id/tv_height_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@id/tv_height"
                    app:layout_constraintStart_toStartOf="@id/iv_height"
                    app:layout_constraintTop_toBottomOf="@id/iv_height"
                    tools:text="1.7 m" />

                <ImageView
                    android:id="@+id/iv_weight"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/weight_image_cd"
                    android:src="@drawable/weight"
                    app:layout_constraintBottom_toBottomOf="@id/iv_height"
                    app:layout_constraintEnd_toStartOf="@id/tv_weight"
                    app:layout_constraintTop_toTopOf="@id/iv_height" />

                <TextView
                    android:id="@+id/tv_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:text="@string/tv_weight"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@id/iv_weight"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/iv_weight" />

                <TextView
                    android:id="@+id/tv_weight_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@id/tv_weight"
                    app:layout_constraintStart_toStartOf="@id/iv_weight"
                    app:layout_constraintTop_toBottomOf="@id/iv_weight"
                    tools:text="29 hg" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/half_margin_default"
            app:cardElevation="@dimen/half_margin_default"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_haw">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/half_margin_default">

                <TextView
                    android:id="@+id/tv_base_stats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Base Stats:"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_hp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_hp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/pb_hp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/pb_hp" />

                <ProgressBar
                    android:id="@+id/pb_hp"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/half_margin_default"
                    android:progress="25"
                    android:progressTint="#F9EF00"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/pb_sp_atk"
                    app:layout_constraintTop_toBottomOf="@id/tv_base_stats" />

                <TextView
                    android:id="@+id/tv_atk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_atk"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/pb_atk"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/pb_atk" />

                <ProgressBar
                    android:id="@+id/pb_atk"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/half_margin_default"
                    android:progress="25"
                    android:progressTint="#FD5444"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/pb_sp_atk"
                    app:layout_constraintTop_toBottomOf="@id/pb_hp" />

                <TextView
                    android:id="@+id/tv_def"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_def"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/pb_def"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/pb_def" />

                <ProgressBar
                    android:id="@+id/pb_def"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/half_margin_default"
                    android:progress="25"
                    android:progressTint="#7079E6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/pb_sp_atk"
                    app:layout_constraintTop_toBottomOf="@id/pb_atk" />

                <TextView
                    android:id="@+id/tv_sp_atk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_sp_atk"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/pb_sp_atk"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/pb_sp_atk" />

                <ProgressBar
                    android:id="@+id/pb_sp_atk"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/half_margin_default"
                    android:progress="25"
                    android:progressTint="#BF6AED"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_sp_atk"
                    app:layout_constraintTop_toBottomOf="@id/pb_def" />

                <TextView
                    android:id="@+id/tv_sp_def"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_sp_def"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/pb_sp_def"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/pb_sp_def" />

                <ProgressBar
                    android:id="@+id/pb_sp_def"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/half_margin_default"
                    android:progress="25"
                    android:progressTint="#FE56CE"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/pb_sp_atk"
                    app:layout_constraintTop_toBottomOf="@id/pb_sp_atk" />

                <TextView
                    android:id="@+id/tv_spd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_spd"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/pb_spd"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/pb_spd" />

                <ProgressBar
                    android:id="@+id/pb_spd"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/half_margin_default"
                    android:progress="25"
                    android:progressTint="#53D260"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/pb_sp_atk"
                    app:layout_constraintTop_toBottomOf="@id/pb_sp_def" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>